Debuging #1
Now, eventFlow is working correctly, Program can evaluate utilization and avarage job tardiness with ReportGenerator.